--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "formik": "^2.2.9",
+    "lottie-react-native": "^5.1.6",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.7",
