--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.5",
+    "add": "2.0.6",
     "axios": "^1.4.0",
     "formik": "^2.2.9",
     "lottie-react-native": "^5.1.6",
@@ -23,11 +24,13 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-date-picker": "^4.2.13",
+    "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "yarn": "1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
